--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fs-magic",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Advanced Filesystem Utilities and promisified fs base.",
   "keywords": [
     "fs",
@@ -28,5 +28,8 @@
   "dependencies": {
     "tar-stream": "^1.5.2",
     "thenify-all": "^1.6.0"
-  }
+  },
+  "homepage": "https://github.com/AndiDittrich/Node.fs-magic",
+  "bugs": "https://github.com/AndiDittrich/Node.fs-magic/issues",
+  "repository": "AndiDittrich/Node.fs-magic"
 }
