--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fs-magic",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Advanced Filesystem Utilities and promisified fs base.",
   "keywords": [
     "fs",
@@ -12,7 +12,9 @@
     "promise",
     "isFile",
     "isDirectory",
-    "isSymlink"
+    "isSymlink",
+    "untar",
+    "untgz"
   ],
   "files": [
     "lib",
@@ -32,8 +34,14 @@
     "tar-stream": "^1.5.2",
     "thenify-all": "^1.6.0"
   },
+  "devDependencies": {
+    "node-fetch": "^1.6.3"
+  },
   "homepage": "https://github.com/AndiDittrich/Node.fs-magic",
   "bugs": "https://github.com/AndiDittrich/Node.fs-magic/issues",
   "repository": "AndiDittrich/Node.fs-magic",
-  "os" : ["linux" ,"darwin"]
+  "os": [
+    "linux",
+    "darwin"
+  ]
 }
