--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fs-magic",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "author": "Andi Dittrich (https://andidittrich.de)",
   "license": "MIT",
   "homepage": "https://github.com/AndiDittrich/Node.fs-magic",
@@ -10,6 +10,10 @@
   "keywords": [
     "fs",
     "mkdir",
+    "mkdirp",
+    "rmrf",
+    "scandir",
+    "recursive",
     "utilities",
     "copy",
     "await",
