fixed lint errors

--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "tar-stream": "^1.5.2"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-aenondynamics": "^0.1.0",
     "mocha": "^3.4.2",
     "node-fetch": "^1.6.3"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "eslint lib/**.js; mocha"
   }
 }
